# Apex-Discovery-Engine

./: .gitignore  .pyre_configuration  README.md  debug_brave.py  debug_brave_pagination.py  main.py  pyproject.toml  pyrightconfig.json  verify_bing_decode.py
data/: final_pg_leads.xlsx  pg_data.xlsx  pg_deep.xlsx  pg_enhanced.xlsx  websites.json
debug_tools/: brave_full.html  brave_results.html  brave_search.html  debug_ddg_headless.py  debug_maps.py  debug_maps_v2.py
scripts/: analyze_yield.py  check_yield.py
src/: cli.py
src/apex_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/common/: utils.py
src/core/: config.py  data_manager.py  utils.py
src/exporters/: excel.py
src/scraper/: engine.py  extractor.py  fast_hub_search.py  fast_json_search.py  main.py  maps_interactive.py  search_engine.py  simple_crawler.py  utils.py
src/scrapers/: bing.py  brave.py  deep_crawler.py  enricher.py  listing.py  maps.py  search.py  utils.py
src/scrapers/core/: deep_crawler.py  enricher.py  harvester.py  search_coordinator.py
src/scrapers/engines/: bing.py  brave.py  duckduckgo.py  google_maps.py
tests/: test_normalization.py
