[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-scraper"
version = "0.1.0"
description = "A local business scraper CLI tool."
dependencies = [
    "playwright>=1.41.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "duckduckgo-search>=4.0.0",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
scraper = "scraper.main:app"
